<resources>
    <string name="app_name">PerfectHour</string>
    <string name="action_settings">Settings</string>
    <string name="message_box_title">It is time!</string>
    <string name="message_timesheet_not_up_to_date">Time to get things done...</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_notification_sound">Ringtone</string>

    <string name="pref_title_vibration_enabled">Vibrations</string>
    <string name="pref_summary_vibration_enabled">Notifications will vibrate</string>
    <string name="pref_summary_vibration_disabled">Notifications won\'t vibrate</string>

    <string name="pref_notification_no_sound">Silent</string>
    <string name="pref_title_debug_enabled">Debug enabled</string>
    <string name="pref_summary_debug_enabled">Notify every minute</string>
</resources>
