<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <Preference
        app:key="notification_sound"
        app:title="@string/pref_title_notification_sound"
        app:defaultValue="content://settings/system/notification_sound" />

    <CheckBoxPreference
        app:key="vibration_enabled"
        app:title="@string/pref_title_vibration_enabled"
        app:summaryOn="@string/pref_summary_vibration_enabled"
        app:summaryOff="@string/pref_summary_vibration_disabled"
        app:defaultValue="true" />

    <CheckBoxPreference
        app:key="debug_enabled"
        app:title="@string/pref_title_debug_enabled"
        app:summaryOn="@string/pref_summary_debug_enabled"
        app:defaultValue="false" />

</PreferenceScreen>
